--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,8 @@ code {
   background-size: cover;
   background-repeat: no-repeat;
   padding: 2% !important;
-  border: 3px solid rgba(45, 98, 89, 0.297);
+  /* border: 3px solid rgba(45, 98, 89, 0.297); */
+  border: 1px solid #000000;
   border-radius: 10px;
   max-width: 700px !important;
 }
@@ -135,3 +136,7 @@ code {
     display: none;
   }
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
