--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.cdnfonts.com/css/metropolis-2');
+/* @font-face {
+  font-family: 'Metropolis';
+  src: local('Metropolis'), url('') format('woff');
+} */
 
 body {
   margin: 0;
-  font-family: 'Metropolis';
+  font-family: 'Metropolis', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #000000 !important;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
-.MuiList-root { font-family: -apple-system, BlinkMacSystemFont, 'Metropolis', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+.MuiList-root { font-family: 'Metropolis', sans-serif;
   background-color: #fcedbf !important;
 }
 
